--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,11 @@
 
 nav ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 nav li {
+    font-size: 12px;
     line-height: 30px;
 }
 nav a {
